# DSL-Learning

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/AI_ASSISTANT/: AGENTS.md  CLAUDE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
docs/: deployment.md  index.md
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ThemeToggle.tsx  WebcamView.tsx
frontend/src/lib/: sign-language-response.ts
scripts/: README.md  setup-unix.sh  setup-windows-cmd.bat  setup-windows-pwsh.ps1
src/: cli.py
src/backend/api/: routes.py
src/backend/core/: frontend_build.py  letter_sequence.py  session_manager.py
src/backend/detection/: dynamic_detector.py
src/backend/models/: cnn_model.py  config.py  downloader.py  lstm_model.py
tests/: test_frontend_build.py  test_letter_sequence.py  test_routes_decode_frame.py  test_tutorial_manager.py
train/CNN_model/: inference.py  model.py  train.py
train/LSTM_model/: config.py  inference.py  train.py  webcam_test.py
train/data_collect/: record_landmarks.py
train/dataset_builder/: augment_landmarks.py  frankenstein_builder.py  merge_custom_letters.py
