[project]
name = "DSL-Learning"
version = "0.1.0"
description = "Real-time DSL sign language learning application using MediaPipe and PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "fastdtw",
    "matplotlib",
    "mediapipe==0.10.14",
    "numpy",
    "opencv-python",
    "pandas",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "train"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.9.1",
]

[tool.ruff.lint]
ignore = ["E402", "E741"]
